--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <main>
-        <div id="display"><span>1,234</span></div>
+        <div id="display">
+            <span id="text"></span>
+        </div>
         <div id="buttons">
             <div id="buttons-left">
                 <div id="extra-buttons">
