Started with calculator functionality

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
     <main>
         <div id="display">
-            <span id="text"></span>
+            <span id="equation">123 +</span>
+            <span id="input">123</span>
         </div>
         <div id="buttons">
             <div id="buttons-left">
