--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <main>
         <div id="display">
-            <span id="equation">123 +</span>
-            <span id="input">123</span>
+            <span id="equation"></span>
+            <span id="input"></span>
         </div>
         <div id="buttons">
             <div id="buttons-left">
